# Apriori_Xeonphi

./: .gitignore  CMakeLists.txt  README.md  Report  run.sh  sample_output.txt  tohop.txt
src/: csv_data.h  main.c  main.cpp  readcsv.c  readcsv.cpp  version.h
